application2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service2
  namespace: example-service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service2
  template:
    metadata:
      labels:
        app: example-service2
    spec:
      containers:
        - name: example-service2
          image: tutum/hello-world:latest
          ports:
            - containerPort: 80
