application2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service2
  namespace: example-service2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: example-service2
