application2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-service2
  namespace: example-service2
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/example-service2/*"
        backend:
          service:
            name: example-service2
            port:
              number: 80
        pathType: Prefix
